k8s/07-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: devops-project
spec:
  selector:
    app: spring-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
